chore(tests): Add cucumber
Add cucumber gem, configuration, and instructions to README.
More: https://github.com/cucumber/cucumber-rails

closes #10

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   host: localhost
   template: template0
 
-test:
+test: &test
   adapter: postgresql
   encoding: utf8
   database: vervet_test
@@ -16,3 +16,6 @@ test:
   min_messages: WARNING
   host: localhost
   template: template0
+
+cucumber:
+  <<: *test
