fix(checkstyle): Fix scss-lint configuration
Disable the `ImportantRule` so that `!important` can be used to
override the theme's styles.

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -50,7 +50,7 @@ linters:
   IdSelector:
     enabled: true
   ImportantRule:
-    enabled: true
+    enabled: false
   ImportPath:
     enabled: true
     leading_underscore: false
